controller  adjusted to communicate with GraphQL mutation
