# Schemas/index.js
@@ -7,13 +7,13 @@ const {
   GraphQLList,
 } = graphql;
 
-import { mockData } from "../simualedData/MOCK_DATA.js";
 import { mockCategory } from "../simualedData/mock_data_category.js";
 import { mockProduct } from "../simualedData/mock_data_product.js";
 
 import { CategoryType } from "./TypeDefs/CategoryType.js";
 import { ProductType, UpdateProductType } from "./TypeDefs/ProductType.js";
-import { UserType } from "./TypeDefs/UserType.js";
+
+import { updateProductState } from '../service/service.js'
 import _ from 'lodash';
 
 //a. REST API and a GraphQL API to GET category list. If the parent_id is given it should return only the child categories
@@ -22,13 +22,6 @@ import _ from 'lodash';
 const RootQuery = new GraphQLObjectType({
   name: "RootQueryType",
   fields: {
-    getAllUsers: {
-      type: new GraphQLList(UserType),
-      args: { id: { type: GraphQLInt } },
-      resolve(parent, args) {
-        return mockData;
-      },
-    },
     getCategory: {
       type: new GraphQLList(CategoryType),
       args: { parent_id: { type: GraphQLInt } },
@@ -60,6 +53,7 @@ const RootQuery = new GraphQLObjectType({
   },
 });
 
+
 const Mutation = new GraphQLObjectType({
   name: "Mutation",
   fields: {
@@ -68,16 +62,13 @@ const Mutation = new GraphQLObjectType({
       args: {
         stateFrom: { type: GraphQLString },
         stateTo: { type: GraphQLString },
+        productId: { type: GraphQLInt },
       },
       resolve(parent, args) {
-        userData.push({
-          id: userData.length + 1,
-          firstName: args.firstName,
-          lastName: args.lastName,
-          email: args.email,
-          password: args.password,
-        });
-        return args;
+        const {stateFrom,stateTo,productId} = args;
+        console.log("JSON.stringify(args):",JSON.stringify(args));
+        const success = updateProductState(stateFrom,stateTo,productId)
+        return success;
       },
     },
   },
