# controller/controller.js
@@ -1,11 +1,8 @@
 import fetch from "node-fetch";
-import {URL} from '../consts.js';
+import { URL } from "../consts.js";
+import _ from "lodash";
 
-export async function updateProductState() {
-
-}
-
-export async function getCategory(parentId) {
+export async function getCategoryFromGraphAPI(parentId) {
   const fitVariable = parentId ? `(parent_id: ${parentId})` : "";
   const jsonQuery = {
     query: `{  getCategory${fitVariable} {category_id,parent_id,category_name  }}`,
@@ -15,12 +12,32 @@ export async function getCategory(parentId) {
   return data;
 }
 
-export async function getProduct(state) {
+export async function getProductFromGraphAPI(state) {
   const fitVariable = state ? `(state: "${state}")` : "";
   const jsonQuery = {
     query: `{   getProduct${fitVariable} { product_id,category_id,product_price,product_image,product_name,state  } }`,
     variables: null,
   };
+  const data = await fetchFromGraphQL(jsonQuery);
+  return data;
+}
+
+export async function updateProductStateFromGraphAPI(
+  stateFrom,
+  stateTo,
+  productId
+) {
+  const fitVariable =
+    `stateFrom: "${stateFrom}",stateTo: "${stateTo}",productId: ${productId}`;
+  const jsonQuery2 = {
+    query:
+      `mutation {updateProductState(${fitVariable}) {  stateTo,stateFrom, productId}  }`,
+    variables: null,
+  };
+
+  const jsonQuery = 
+    {"query":`mutation {updateProductState(${fitVariable}) {stateTo,stateFrom}  }`,"variables":null}
+  
   const data = await fetchFromGraphQL(jsonQuery);
   return data;
 }
