# router.js
@@ -1,5 +1,5 @@
 import express from "express";
-import {getCategory, getProduct,updateProductState} from './controller/controller.js';
+import {getCategoryFromGraphAPI, getProductFromGraphAPI, updateProductStateFromGraphAPI} from './controller/controller.js';
 export const router = express.Router();
 
 router.get('/', function (req, res) {
@@ -10,7 +10,7 @@ router.get('/', function (req, res) {
 router.get('/getCategory', async (req, res) => {
   const parentId = req.query.parent_id
   console.log(`parentId ${parentId}`);
-  const data = await getCategory(parentId);
+  const data = await getCategoryFromGraphAPI(parentId);
   res.send(data);
 });
 
@@ -19,16 +19,16 @@ router.get('/getCategory', async (req, res) => {
 router.get('/getProduct', async function (req, res) {
   const state = req.query.state;
   console.log(`state: ${state}`);
-  const data = await getProduct(state);
+  const data = await getProductFromGraphAPI(state);
   res.send(data);
 })
 
 //{ stateFrom: 'S-1', stateTo: 'S-2' }
 router.post('/updateProductState', async function (req, res) {
-  const {stateFrom, stateTo} = req.body
+  const {stateFrom, stateTo, productId} = req.body
   console.log(`req body: ${stateFrom}, ${stateTo}`);
-  const data = await updateProductState(state);
-  res.send(data);
+  const data = await updateProductStateFromGraphAPI(stateFrom,stateTo,productId);
+  res.send({"status": data});
 })
   
 
